--- a/styles/style.css
+++ b/styles/style.css
@@ -63,3 +63,168 @@ input[type="color"]::-webkit-color-swatch {
     border: 1px solid transparent; 
 	border-radius: 50%;
 }
+
+
+.aside {
+    overflow-y: auto;
+    flex-basis: 340px;
+    background-color: var(--background-color);
+    color: var(--color);
+    overflow: auto;
+    padding: 0 15px;
+}
+.aside::-webkit-scrollbar {
+    width: 1px ;
+    background-color: black;
+
+}
+.hidden {
+    display: none;
+}
+.all-space{
+    width: 100%;
+}
+.half-space{
+    width: 50%;
+}
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flex {
+    display: flex;
+}
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+.space-between{
+    justify-content: space-between;
+}
+.space{
+    margin: 7px 0px;
+}
+.space-background{
+    gap: 10px;
+}
+.mt-5px {
+    margin-top: 5px;
+}
+.mb-10px{
+    margin-bottom: 10px;
+}
+.mb-20px{
+    margin-bottom: 20px;
+}
+.input-style{
+    border: none;
+    border-radius: 3px;
+    background-color: var(--input-color);
+    color: var(--color);
+    outline:none;
+    font-family: 'Open Sans', sans-serif;
+    padding: 10px;
+    margin: 7px 0;
+    outline: none;
+}
+.input-style:hover{
+    background-color: var(--hover-input);
+}
+.bold-text{
+    font-weight: bold;
+}
+.cont-input-color{
+    margin: 7px 0;
+    width: 100%;
+    background-color: var(--input-color);
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+.cont-input-color:hover{
+    background-color: var(--hover-input);
+}
+.text-background-color{
+    font-size: 14.5px;
+    text-transform: uppercase;
+}
+.button{
+	background-color: var(--input-color);
+	font-size: 14px;
+	font-weight: 400;
+    border:none;
+    cursor: pointer;
+}
+.text-check{
+    font-size: 14px;
+}
+.color{
+    color: var(--color)
+}
+.close-aside{
+    display: none !important;
+    position: absolute;
+    cursor: pointer;
+    right: 0;
+    margin: 15px;
+    color: var(--color);
+}
+.input-range {
+    padding: 10px;
+    margin: 7px 0;
+    outline: none;
+    -webkit-appearance: none;
+    background: transparent;
+}
+.input-range::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    background-color: #4E5565;
+    height: 9px;
+    border-radius: 1em;
+}
+.input-range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: var(--thumb-color);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-top: -5px;
+}
+
+@media screen and (max-width: 1300px){
+    .close-aside{
+        display: flex !important;
+    }
+    .aside{
+        position: absolute;
+        right: 0;
+        z-index: 1;
+    }
+}
+@media screen and (max-width:700px){
+    .aside{
+        width: 100%;		
+    	}
+    .title {
+        font-size: 18px;
+        text-align: center;
+    	}
+    .wrapper {
+        width: 345px !important;
+        height: 345px !important;
+        }
+    .top-text {
+            font-size: 30px;
+        }
+    .bottom-text {
+            font-size: 30px;
+        }
+	}
+	@media screen and (max-width:350px){
+		.wrapper{
+		width: 300px !important;
+        height: 300px !important;
+		}
+	}
